@@ -14,7 +14,7 @@
 	    <!-- this is needed for running the junit test in netbeans -->
         <import file="nbproject/build-impl.xml"/>
 
-	<property name="game.version" value="1.1.1.1"/>
+	<property name="game.version" value="1.1.1.2"/>
 
 
         <!-- -->
