@@ -21,6 +21,7 @@ CURRENT VERSION:
 	russian update
 	when you update to a new version it does not replace the game.ini
 	do not give 414 errors on really large numbers of maps
+	when loading a cards file into the map editor, the mission text for destroy a player is displayed incorrectly
 
 	Android 20 maps not loading because of currupted download error fixed,
 		   (files were currupted because of operator transcoding)
